git commit -m "sections completed"

--- a/index.html
+++ b/index.html
@@ -15,6 +15,35 @@
             <li><a href="#contact">Contact</a></li>
         </nav>
     </header>
+    <main>
+        <!-- About Section -->
+        <section id="about">
+            <h2>About Me</h2>
+            <p>Hey there! 👋 I'm Suzana, a coding enthusiast and self-proclaimed unicorn developer 🦄✨. I've got a knack for turning caffeine into code and dreams into digital reality. When I'm not busy writing elegant algorithms or debugging like a detective, you'll find me chasing down bugs (the software kind, not the creepy-crawly kind!) with my trusty debugger cape.</p>
+            <p>As a firm believer in the power of creativity and innovation, I bring a sprinkle of magic to every project I touch. From crafting pixel-perfect designs to making databases dance to my coding tunes, I thrive on challenges and love diving into new technologies faster than you can say "Hello, World!" 💻🚀</p>
+            <p>My coding superpowers include</p>
+            <ul>
+                <li><bold>JavaScript Sorcery:</bold>Turning complex problems into elegant solutions with the wave of my JavaScript wand.</li>
+                <li><bold>CSS Wizardry:</bold>Styling and animating web elements like a magician, because who said websites can't have a little pizzazz?</li>
+                <li><bold>HTML Alchemy:</bold>Mixing and molding HTML elements like a master chef, creating structures that are as solid as they are delightful.</li>
+            </ul>
+            <p>But wait, there's more! When I'm not busy crafting digital wonders, I'm probably exploring the latest tech trends, attending hackathons (I've got a trophy or two 🏆), or indulging in some serious geekery with my fellow coding unicorns.</p>
+            <p>So, if you're looking for a developer who brings a dash of magic, a sprinkle of humor, and a whole lot of passion to the table, you've come to the right place! Let's create something amazing together 🌈✨.</p>
+        </section>
+        <section id="projects">
+            <h2>Projects</h2>
+            <ul>
+                <li><a href="https://github.com/suz-ana-j/pp1JavascriptSyntax.git">Mixed Messages</a></li>
+                <li><a href="https://github.com/suz-ana-j/pp2PersonalPortfolioWebsite.git">My Not-Too-Serious Personal Portfolio</a></li>
+            </ul>
+        </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Have an interesting project? I'd love to hear about it!</p>
+            <p><a href="mailto:not-my-real_email@outlook.com">not-my-real_email@outlook.com</a></p>
+        </section>
+        <button id="darkModeButton">Toggle Dark Mode</button>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
